<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Body Buldroid</string>
    <string name="button_name_enable">Start</string>
    <string name="button_name_pause">Pause</string>
    <string name="button_name_resume">Resume</string>
    <string name="button_name_reset">Reset</string>
    <string name="iterationNumberLabel">Iteration : </string>
    <string name="iterationNumberValue">0</string>
	<string name="planet_prompt">Choose a planet</string>
	<string name="unit">Kg</string>
	<string name="button_name_update">Update</string>
	<string name="button_name_next">Next</string>
	<string name="chargeLabelValue">"Charge : "</string>
</resources>