<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <GridLayout
         android:id="@+id/gridLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.15" >

         <TextView
             android:id="@+id/countDownTextView"
             android:layout_width="271dp"
             android:layout_column="1"
             android:layout_columnSpan="4"
             android:layout_row="1"
             android:inputType="numberDecimal"
             android:textSize="90dp" />

         <Button
             android:id="@+id/btn_start"
             android:layout_width="178dp"
             android:layout_height="88dp"
             android:layout_column="1"
             android:layout_columnSpan="2"
             android:layout_row="2"
             android:text="@string/button_name_enable" />

         <Button
             android:id="@+id/btn_resume"
             android:layout_width="wrap_content"
             android:layout_height="74dp"
             android:layout_column="3"
             android:layout_row="2"
             android:text="@string/button_name_resume" />

         <TextView
             android:id="@+id/textViewIterationNumberLabel"
             android:layout_column="1"
             android:layout_gravity="right"
             android:layout_row="4"
             android:text="@string/iterationNumberLabel"
             android:textAppearance="?android:attr/textAppearanceMedium" />

         <TextView
             android:id="@+id/textViewIterationNumber"
             android:layout_width="35dp"
             android:layout_column="2"
             android:layout_row="4"
             android:text="@string/iterationNumberValue"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="40dp" />

         <Spinner
             android:id="@+id/spinner1"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="5" />

         <TextView
             android:id="@+id/textView1"
             android:layout_column="2"
             android:layout_gravity="right"
             android:layout_row="5"
             android:text="@string/unit"
             android:textAppearance="?android:attr/textAppearanceMedium" />

         <EditText
             android:id="@+id/chargeText"
             android:layout_width="62dp"
             android:layout_column="2"
             android:layout_row="5"
             android:inputType="number" >

             <requestFocus />
         </EditText>

         <Button
             android:id="@+id/btn_update"
             android:layout_width="wrap_content"
             android:layout_column="3"
             android:layout_row="5"
             android:text="@string/button_name_update" />

         <Space
             android:layout_width="21dp"
             android:layout_height="1dp"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal"
             android:layout_row="0" />

         <Space
             android:layout_width="91dp"
             android:layout_height="1dp"
             android:layout_column="1"
             android:layout_row="0" />

         <Space
             android:layout_width="90dp"
             android:layout_height="1dp"
             android:layout_column="2"
             android:layout_row="0" />

         <Space
             android:layout_width="141dp"
             android:layout_height="1dp"
             android:layout_column="3"
             android:layout_gravity="fill_horizontal"
             android:layout_row="0" />

         <Space
             android:layout_width="1dp"
             android:layout_height="38dp"
             android:layout_column="0"
             android:layout_row="0" />

         <Space
             android:layout_width="1dp"
             android:layout_height="108dp"
             android:layout_column="0"
             android:layout_row="1" />

         <Space
             android:layout_width="1dp"
             android:layout_height="10dp"
             android:layout_column="0"
             android:layout_row="3" />

         <Space
             android:layout_width="1dp"
             android:layout_height="108dp"
             android:layout_column="0"
             android:layout_row="4" />

         <Space
             android:layout_width="1dp"
             android:layout_height="109dp"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal"
             android:layout_row="5" />
     </GridLayout>

</LinearLayout>